--- a/index.htm
+++ b/index.htm
@@ -73,10 +73,10 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
-                    <p>I am a final year student of Kocaeli University Information Systems Engineering. At the same time, I work in the Network Academy Information Processing Department. First, I won the Computer Programming Department of Kırklareli University.
-                        At the end of 1 year, I transferred to Kocaeli University Computer Programming department due to my high school average. And I graduated from this department. Later, I transferred to Kocaeli University Information Systems Engineering
-                        with vertical transfer. I am currently continuing my education here. I concentrate on English as a foreign language. By completing my current education from American Culture Language Schools. I am at B2 level. I continue my work.
-                        I am willing to learn. I am open to self-development. Currently, I continue to improve myself by participating in many courses on various websites. </p>
+                    <p>I am currently a senior student at Kocaeli University Information Systems Engineering. At the same time, I work in the Network Academy Information Processing Department. First of all, I won the Computer Programming Department of Kırklareli
+                        University. At the end of 1 year, I transferred to Kocaeli University Computer Programming department. I graduated from Kocaeli University Computer Programming Department. Later, I transferred to Kocaeli University Information
+                        Systems Engineering with a vertical transfer. I am currently continuing my education here. I focus on English as a foreign language. By completing my current education from American Culture Language Schools, I was entitled to receive
+                        a B2 level certificate. I continue to study English, I am determined to learn. I am open to self-development. Currently, I continue to improve myself by attending many courses on various websites. </p>
                 </div>
             </div>
 
