--- a/index.htm
+++ b/index.htm
@@ -221,6 +221,9 @@
                 <div>
                     <img src="images/certificate/GitHub.png" />
                 </div>
+                <div>
+                    <img src="images/certificate/bilisimhukuk.png" />
+                </div>
             </div>
         </div>
     </section>
