--- a/index.htm
+++ b/index.htm
@@ -73,10 +73,14 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
-                    <p>I am currently a senior student at Kocaeli University Information Systems Engineering. At the same time, I work in the Network Academy Information Processing Department. First of all, I won the Computer Programming Department of Kırklareli
-                        University. At the end of 1 year, I transferred to Kocaeli University Computer Programming department. I graduated from Kocaeli University Computer Programming Department. Later, I transferred to Kocaeli University Information
-                        Systems Engineering with a vertical transfer. I am currently continuing my education here. I focus on English as a foreign language. By completing my current education from American Culture Language Schools, I was entitled to receive
-                        a B2 level certificate. I continue to study English, I am determined to learn. I am open to self-development. Currently, I continue to improve myself by attending many courses on various websites. </p>
+                    <p> I am Serkan Özkan, I was born on March 29, 1996 in Istanbul. I have just graduated from Kocaeli University, Department of Information Systems Engineering. (05/2022) At the same time, I am working in the IT Department of Network Akademi
+                        Company. First, I won the Computer Programming Department of Kırklareli University. At the end of 1 year, I transferred to Kocaeli University Computer Programming department due to my high school average. And I graduated from this
+                        department. Later, I transferred to Kocaeli University Information Systems Engineering with vertical transfer. By completing my engineering education here, I was entitled to graduate with the date 05.2022. I concentrate on English
+                        as a foreign language. Currently, I have completed my education from the American Culture and Language Schools Institution and received a B2 level certificate. I continue my studies by watching movies in English, reading books
+                        in English, and working on some foreign social platforms. In terms of technology, I am trying to improve myself by taking trainings in C#, Python, Html, Css, JavaScript, SQL programming languages ​​from various online platforms.
+                        In the field of systems, I am currently receiving training in the field of System Expertise. I am willing and eager to develop myself in this field. In general, I am open to self-development on my personal development. I am willing
+                        and eager to read, do research, and learn new information in my field. In particular, I take great care to be planned, organized and systematic and to work in that way. Currently, I continue to improve and learn myself by participating
+                        in many courses on various websites. </p>
                 </div>
             </div>
 
