--- a/index.htm
+++ b/index.htm
@@ -228,6 +228,12 @@
                 <div>
                     <img src="images/certificate/bilisimhukuk.png" />
                 </div>
+                <div>
+                    <img src="images/certificate/gitar.jpg" />
+                </div>
+                <div>
+                    <img src="images/certificate/gitar1.jpg" />
+                </div>
             </div>
         </div>
     </section>
