--- a/index.htm
+++ b/index.htm
@@ -234,6 +234,9 @@
                 <div>
                     <img src="images/certificate/gitar1.jpg" />
                 </div>
+                <div>
+                    <img src="images/certificate/cisco.png" />
+                </div>
             </div>
         </div>
     </section>
