--- a/index.htm
+++ b/index.htm
@@ -132,7 +132,7 @@
 
                     <h3>Education Experience</h3>
                     <h4>Information System Engineer</h4>
-                    <span class="company">Kocaeli University  2018 - Currenty</span>
+                    <span class="company">Kocaeli University  2018 - 2022</span>
 
                     <div class="timeline-body">
                         <p>2.79/4.0</p>
