--- a/index.htm
+++ b/index.htm
@@ -229,6 +229,9 @@
                     <img src="images/certificate/bilisimhukuk.png" />
                 </div>
                 <div>
+                    <img src="images/certificate/ileri_ag.png" />
+                </div>
+                <div>
                     <img src="images/certificate/gitar.jpg" />
                 </div>
                 <div>
