--- a/index.htm
+++ b/index.htm
@@ -232,6 +232,9 @@
                     <img src="images/certificate/ileri_ag.png" />
                 </div>
                 <div>
+                    <img src="images/certificate/windowsisletimsistemleri.png" />
+                </div>
+                <div>
                     <img src="images/certificate/gitar.jpg" />
                 </div>
                 <div>
