--- a/index.htm
+++ b/index.htm
@@ -103,8 +103,15 @@
                 <ul>
                     <h3>Work Experience</h3>
 
+                    <h4>Test Automation Engineer</h4>
+                    <span class="company">Virgosol  08.2022 - Currenty</span>
+
+                    <div class="timeline-body">
+                        <p>Software Test Automation</p>
+                    </div>
+
                     <h4>IT Manager</h4>
-                    <span class="company">Network Academy  08.2021 - Currenty</span>
+                    <span class="company">Network Academy  08.2021 - 08.2022</span>
 
                     <div class="timeline-body">
                         <p>Data Processing</p>
