--- a/index.htm
+++ b/index.htm
@@ -73,8 +73,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
-                    <p> I am Serkan Özkan, I was born on March 29, 1996 in Istanbul. I have just graduated from Kocaeli University, Department of Information Systems Engineering. (05/2022) At the same time, I am working in the IT Department of Network Akademi
-                        Company. First, I won the Computer Programming Department of Kırklareli University. At the end of 1 year, I transferred to Kocaeli University Computer Programming department due to my high school average. And I graduated from this
+                    <p> I am Serkan Özkan, I was born on March 29, 1996 in Istanbul.I graduated from Kocaeli University, Department of Information Systems Engineering. I am working as a Test Automation Engineer at Virgosol Company.
+                         First, I won the Computer Programming Department of Kırklareli University. At the end of 1 year, I transferred to Kocaeli University Computer Programming department due to my high school average. And I graduated from this
                         department. Later, I transferred to Kocaeli University Information Systems Engineering with vertical transfer. By completing my engineering education here, I was entitled to graduate with the date 05.2022. I concentrate on English
                         as a foreign language. Currently, I have completed my education from the American Culture and Language Schools Institution and received a B2 level certificate. I continue my studies by watching movies in English, reading books
                         in English, and working on some foreign social platforms. In terms of technology, I am trying to improve myself by taking trainings in C#, Python, Html, Css, JavaScript, SQL programming languages ​​from various online platforms.
