--- a/index.htm
+++ b/index.htm
@@ -250,6 +250,9 @@
                 <div>
                     <img src="images/certificate/cisco.png" />
                 </div>
+                <div>
+                    <img src="images/certificate/yazilimtest.png" />
+                </div>
             </div>
         </div>
     </section>
