--- a/index.htm
+++ b/index.htm
@@ -86,7 +86,7 @@
 
             <ul class="info">
                 <li><span class="block1">Full Name:</span><span class="block2">Serkan ÖZKAN</span></li>
-                <li><span class="block1">Email:</span><span class="block2">Serkanozkann1903@gmail.com</span></li>
+                <li><span class="block1">Email:</span><span class="block2">Serkanozkanofficial@gmail.com</span></li>
                 <li><span class="block1">Website:</span><span class="block2"><a href="http://Serkanozkann.github.io" target="blank">Serkanozkann.github.io</a></span></li>
             </ul>
 
@@ -253,10 +253,13 @@
                 <div>
                     <img src="images/certificate/yazilimtest.png" />
                 </div>
+                <div>
+                    <img src="images/certificate/ProjeYonetimi.png" />
+                </div>
             </div>
         </div>
     </section>
-
+    
 
     <!--Certificate Finish -->
 
