--- a/index.htm
+++ b/index.htm
@@ -257,6 +257,8 @@
                     <img src="images/certificate/ProjeYonetimi.png" />
                 </div><div>
                     <img src="images/certificate/jenkins.png" />
+                </div><div>
+                    <img src="images/certificate/mobiltest.jpg" />
                 </div>
             </div>
         </div>
