--- a/index.htm
+++ b/index.htm
@@ -258,7 +258,7 @@
                 </div><div>
                     <img src="images/certificate/jenkins.png" />
                 </div><div>
-                    <img src="images/certificate/mobiltest.jpg" />
+                    <img src="images/certificate/mobiltest.png" />
                 </div>
             </div>
         </div>
