--- a/index.htm
+++ b/index.htm
@@ -260,6 +260,13 @@
                 </div><div>
                     <img src="images/certificate/mobiltest.png" />
                 </div>
+                 <div>
+                    <img src="images/certificate/ApıServicePostman.jpg" />
+                </div><div>
+                    <img src="images/certificate/ApıTestWithPostman.jpg" />
+                </div><div>
+                    <img src="images/certificate/APIveAPITesti.jpg" />
+                </div>
             </div>
         </div>
     </section>
