--- a/index.htm
+++ b/index.htm
@@ -165,17 +165,16 @@
                         <p>59.43/100</p>
                     </div>
 
+                    <h3>Skills</h3>
+                    <h4>Core Skills</h4>
+                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests</span>
 
+            
 
 
             </div>
         </div>
-
-
-
         </ul>
-
-
         </div>
         </div>
         </div>
