--- a/index.htm
+++ b/index.htm
@@ -167,11 +167,19 @@
 
                     <h3>Skills</h3>
                     <h4>Core Skills</h4>
-                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests</span>
+                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests / API Tests</span>
+                    <h4>Main Language</h4>
+                    <span class="company">Java / SQL / Gherkin / Html / Css / Js</span>
+                    <h4>Frameworks</h4>
+                    <span class="company">Gauge</span>
+                    <h4>Testing Tools</h4>
+                    <span class="company">TestNG / JUnit / Selenium Web Driver / Postman / RESTAssured</span>
+                    <h4>CI/CD</h4>
+                    <span class="company">Jenkins</span>
+                    <h4>Version Control</h4>
+                    <span class="company">Git / Github / Gitlab</span>
 
-            
-
-
+        
             </div>
         </div>
         </ul>
