--- a/index.htm
+++ b/index.htm
@@ -178,6 +178,8 @@
                     <span class="company">Jenkins</span>
                     <h4>Version Control</h4>
                     <span class="company">Git / Github / Gitlab</span>
+                    <h4>Foreign Language</h4>
+                    <span class="company">English</span>
 
         
             </div>
