--- a/index.htm
+++ b/index.htm
@@ -167,7 +167,7 @@
 
                     <h3>Skills</h3>
                     <h4>Core Skills</h4>
-                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests / API Tests</span>
+                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests / REST API Test</span>
 
                     <h4>Main Language</h4>
                     <span class="company">Java / SQL / Gherkin / Html / Css / Js</span>
