--- a/index.htm
+++ b/index.htm
@@ -167,23 +167,23 @@
 
                     <h3>Skills</h3>
                     <h4>Core Skills</h4>
-                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests / REST API Test</span>
-
+                    <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests / REST API Test</span></ul>
+                    &nbsp;
                     <h4>Main Language</h4>
                     <span class="company">Java / SQL / Gherkin / Html / Css / Js</span>
-
+                    &nbsp;
                     <h4>Frameworks</h4>
                     <span class="company">Gauge</span>
-
+                    &nbsp;
                     <h4>Testing Tools</h4>
                     <span class="company">TestNG / JUnit / Selenium Web Driver / Postman / RESTAssured</span>
-                    
+                    &nbsp; 
                     <h4>CI/CD</h4>
                     <span class="company">Jenkins</span>
-            
+                    &nbsp;
                     <h4>Version Control</h4>
                     <span class="company">Git / Github / Gitlab</span>
-
+                    &nbsp;
                     <h4>Foreign Language</h4>
                     <span class="company">English</span>
 
