--- a/index.htm
+++ b/index.htm
@@ -168,22 +168,22 @@
                     <h3>Skills</h3>
                     <h4>Core Skills</h4>
                     <span class="company">Manual Tests / Automation Tests / UI Tests / Android Tests / REST API Test</span>
-                    <br>
+                    <div></div>
                     <h4>Main Language</h4>
                     <span class="company">Java / SQL / Gherkin / Html / Css / Js</span>
-                    <br>
+                    <div></div>
                     <h4>Frameworks</h4>
                     <span class="company">Gauge</span>
-                    <br>
+                    <div></div>
                     <h4>Testing Tools</h4>
                     <span class="company">TestNG / JUnit / Selenium Web Driver / Postman / RESTAssured</span>
-                    <br>
+                    <div></div>
                     <h4>CI/CD</h4>
                     <span class="company">Jenkins</span>
-                    <br>
+                    <div></div>
                     <h4>Version Control</h4>
                     <span class="company">Git / Github / Gitlab</span>
-                    <br>
+                    <div></div>
                     <h4>Foreign Language</h4>
                     <span class="company">English</span>
 
