--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
                     <p> I graduated from Kocaeli University, Department of Information Systems Engineering. I am working as a Test Automation Engineer at Virgosol Company.
-                        First, I won the Computer Programming Department of Kırklareli University. At the end of First year, I transferred to Kocaeli University Computer Programming department.
+                        First, I won the Computer Programming Department of Kirklareli University. At the end of First year, I transferred to Kocaeli University Computer Programming department.
                         And I graduated from this department. Then I transferred to Kocaeli University Information Systems Engineering with the Vertical Transfer Exam.
                         By completing my engineering education here, I was entitled to graduate with the date 05.2022.
                         In terms of technology, I am trying to improve myself by taking trainings in C#, Python, Java, Html, Css, JavaScript, SQL programming languages from various online platforms.
