--- a/index.htm
+++ b/index.htm
@@ -282,6 +282,8 @@
                     <img src="images/certificate/ApıTestWithPostman.jpg" />
                 </div><div>
                     <img src="images/certificate/APIveAPITesti.jpg" />
+                </div><div>
+                    <img src="images/certificate/javatau.jpg" />
                 </div>
             </div>
         </div>
