--- a/index.htm
+++ b/index.htm
@@ -264,6 +264,8 @@
                     <img src="images/certificate/APIveAPITesti.jpg" />
                 </div><div>
                     <img src="images/certificate/javatau.jpg" />
+                </div><div>
+                    <img src="images/certificate/cevikprojeyönetimi.jpg" />
                 </div>
             </div>
         </div>
