--- a/index.htm
+++ b/index.htm
@@ -267,6 +267,9 @@
                 </div><div>
                     <img src="images/certificate/cevikprojeyönetimi.jpg" />
                 </div>
+                <div>
+                    <img src="images/certificate/SeleniumWebDriver.jpg" />
+                </div>
             </div>
         </div>
     </section>
