--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,7 @@
             </div>
 
             <ul class="info">
-                <li><span class="block1">Full Name:</span><span class="block2">Serkan ÖZKAN</span></li>
+                <li><span class="block1">Full Name:</span><span class="block2">Serkan ÖZKAN | ISTQB® CTFL Software Test Automation Engineer</span></li>
                 <li><span class="block1">Email:</span><span class="block2">Serkanozkanofficial@gmail.com</span></li>
                 <li><span class="block1">Website:</span><span class="block2"><a href="http://Serkanozkann.github.io" target="blank">Serkanozkann.github.io</a></span></li>
             </ul>
@@ -208,19 +208,7 @@
                     <img src="images/certificate/TemelAg.png" />
                 </div>
                 <div>
-                    <img src="images/certificate/NLP.png" />
-                </div>
-                <div>
                     <img src="images/certificate/english.jpg" />
-                </div>
-                <div>
-                    <img src="images/certificate/IML.png" />
-                </div>
-                <div>
-                    <img src="images/certificate/ML.png" />
-                </div>
-                <div>
-                    <img src="images/certificate/NLP1.png" />
                 </div>
                 <div>
                     <img src="images/certificate/database.png" />
@@ -270,6 +258,10 @@
                 <div>
                     <img src="images/certificate/SeleniumWebDriver.jpg" />
                 </div>
+                <div>
+                    <img src="images/certificate/ıstqb.jpg" />
+                </div>
+
             </div>
         </div>
     </section>
@@ -281,7 +273,7 @@
 
     <!-- Footer  Start -->
     <footer>
-        <span> Created By <a href="#">SerkanOzkan</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span> Created By <a href="#">SerkanOzkan</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
     <!-- Footer Finish -->
 
